--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -486,19 +486,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -510,12 +521,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred_orig = model.predict(X_test)"
    ]
   },
   {
@@ -533,32 +544,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9472258496434869\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
+    "print(balanced_accuracy_score(y_test, y_pred_orig))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18672,    95],\n",
+       "       [   62,   555]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_pred_orig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "          0       1.00      0.99      0.90      1.00      0.95      0.90     18767\n",
+      "          1       0.85      0.90      0.99      0.88      0.95      0.89       617\n",
+      "\n",
+      "avg / total       0.99      0.99      0.90      0.99      0.95      0.90     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_pred_orig))"
    ]
   },
   {
@@ -569,12 +614,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:The logistic regression model can predict a healthy loan and high risk loan with a 94.7% accuracy. The precision is also high with 85% of predicted high risk loans being true."
    ]
   },
   {
