rerun code and update results in read me

--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,14 +544,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9606544163787829\n"
+      "0.9439243381325739\n"
      ]
     }
    ],
@@ -562,17 +562,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[18637,    95],\n",
-       "       [   48,   604]])"
+       "array([[18671,    75],\n",
+       "       [   69,   569]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -593,10 +593,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.93      1.00      0.96      0.93     18732\n",
-      "          1       0.86      0.93      0.99      0.89      0.96      0.92       652\n",
+      "          0       1.00      1.00      0.89      1.00      0.94      0.90     18746\n",
+      "          1       0.88      0.89      1.00      0.89      0.94      0.88       638\n",
       "\n",
-      "avg / total       0.99      0.99      0.93      0.99      0.96      0.93     19384\n",
+      "avg / total       0.99      0.99      0.90      0.99      0.94      0.90     19384\n",
       "\n"
      ]
     }
@@ -620,7 +620,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:The logistic regression model can predict a healthy loan and high risk loan with a 94.7% accuracy. The precision is also high with 85% of predicted high risk loans being true."
+    "**Answer:The logistic regression model can predict a healthy loan and high risk loan with a 94.4% accuracy. The precision is also high with 88% of predicted high risk loans being correctly labeled."
    ]
   },
   {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,18 +663,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    56304\n",
-       "1    56304\n",
+       "0    56290\n",
+       "1    56290\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,14 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9933362612975533\n"
+      "0.9953817524959139\n"
      ]
     }
    ],
@@ -741,15 +741,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18626   106]\n",
-      " [    5   647]]\n"
+      "[[18661    85]\n",
+      " [    3   635]]\n"
      ]
     }
    ],
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -769,10 +769,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18732\n",
-      "          1       0.86      0.99      0.99      0.92      0.99      0.99       652\n",
+      "          0       1.00      1.00      1.00      1.00      1.00      0.99     18746\n",
+      "          1       0.88      1.00      1.00      0.94      1.00      0.99       638\n",
       "\n",
-      "avg / total       1.00      0.99      0.99      0.99      0.99      0.99     19384\n",
+      "avg / total       1.00      1.00      1.00      1.00      1.00      0.99     19384\n",
       "\n"
      ]
     }
@@ -796,8 +796,13 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer: The logistic regression model fit with oversampled data is able to predict healthy vs. high-risk loan accurately 99.4% of the time. "
+    "**Answer: The logistic regression model fit with oversampled data is able to predict healthy vs. high-risk loan accurately 99.5 of the time. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
